objects/Routing_Table__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Article used to facilitate understanding of who should be responsible of which case/enquiry</description>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>DMDR - Drives and Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMMG - Motors &amp; Generators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMPC - Power Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMRO - Robotics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPCO - EP Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPDS - Distribution Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPIN - GEIS Integration &amp; Synergies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPIP - Installation Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPIS - EP Industrial Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSB - Smart Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSC - Small Country BU for EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSO - EP Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSP - Smart Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSU - Sundry EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IACO - IA Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAEN - Energy Industries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAMA - Measurement &amp; Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAMP - Marine &amp; Ports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAPI - Process Industries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IASC - Small Country BU for IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IASU - Sundry IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IATU - Turbocharging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOCO - MO Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MODR - Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOMG - Motors &amp; Generators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOSC - Small Country BU for MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOSU - Sundry MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PACT - Control Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAMA - Marine &amp; Ports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAMP - Measurement &amp; Analytics</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report_with_Linked_Cases__c</fullName>
        <description>SFDC-3198 Cases Linked in Articles</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; $Label.Report_URL_Id &amp; &quot;?pv0=&quot; &amp; Id , &quot;Link&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Report showing details of all Cases linked to this Article</inlineHelpText>
        <label>Report with Linked Cases</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPOC_Sales_Email__c</fullName>
        <label>SPOC Sales Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SPOC_Sales_Location__c</fullName>
        <description>This is the location where the SPOC sits</description>
        <inlineHelpText>This is the location where the SPOC sits</inlineHelpText>
        <label>SPOC Sales Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SPOC_Sales_Mobile__c</fullName>
        <label>SPOC Sales Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SPOC_Sales_Phone__c</fullName>
        <label>SPOC Sales Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SPOC_Sales__c</fullName>
        <description>Person responsible for any sales question</description>
        <label>SPOC Sales</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPOC_Service_Email__c</fullName>
        <label>SPOC Service Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SPOC_Service_Location__c</fullName>
        <inlineHelpText>This is the location where the SPOC sits</inlineHelpText>
        <label>SPOC Service Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SPOC_Service_Mobile__c</fullName>
        <label>SPOC Service Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SPOC_Service_Phone__c</fullName>
        <label>SPOC Service Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SPOC_Service__c</fullName>
        <label>SPOC Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPOC_Technical_Email__c</fullName>
        <label>SPOC Technical Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SPOC_Technical_Location__c</fullName>
        <inlineHelpText>This is the location where the SPOC sits</inlineHelpText>
        <label>SPOC Technical Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SPOC_Technical_Mobile__c</fullName>
        <label>SPOC Technical Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SPOC_Technical_Phone__c</fullName>
        <label>SPOC Technical Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SPOC_Technical__c</fullName>
        <label>SPOC Technical</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STS_ArticleProductsNames__c</fullName>
        <description>STS PR 2.0 - field for showing products added to the article.</description>
        <inlineHelpText>This fields shows Product or Products that are associated with this Article. A maximum of 255 characters can be shown in this field.</inlineHelpText>
        <label>Article Product Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STS_ArticleProducts__c</fullName>
        <description>STS PR 2.0 - field for adding and editing products to an article.</description>
        <formula>IF( ISPICKVAL(PublishStatus, &apos;Draft&apos;) || ISPICKVAL(PublishStatus, &apos;Online&apos;), HYPERLINK(&quot;/apex/STS_ProductTreeSelectionPage?addTo=&quot;+Id+&quot;&amp;id=&quot;+Id+&quot;&amp;retURL=&quot;+Id, $Label.STS_Add, &apos;_self&apos;) &amp;&apos; &apos;&amp; HYPERLINK(&quot;/apex/STS_ProdViaPage?id=&quot;+Id, $Label.STS_Edit, &apos;_self&apos;), $Label.STS_ArchivedArticleMessage)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Click Add if you want add one or more Products, click Edit if you want to modify one or more Products.</inlineHelpText>
        <label>Article Products</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Was_Sent_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was Sent for Approval</label>
        <type>Checkbox</type>
    </fields>
    <label>Routing Table</label>
    <pluralLabel>Routing Table</pluralLabel>
</CustomObject>